manifests/apps/05-media/01-jellyfin/02-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service-discovery
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: discovery
    port: 7359
    protocol: UDP
  - name: dlna
    port: 1900
    protocol: UDP
